--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/LTUC/401-entrance-exam-code-challenge#readme",
     "dependencies": {
-        "jest": "^26.6.3"
+        "jest": "^26.6.3",
+        "test": "^0.6.0"
     }
 }
